manifest/objects/Q_Item__c.object
<CustomObject>
    <fields>
        <fullName>Dst__c</fullName>
        <label>Destination</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ItemKey__c</fullName>
        <externalId>true</externalId>
        <label>Item Key</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Livongo_Account_Id__c</fullName>
        <label>Livongo Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Livongo_Opp_Id__c</fullName>
        <label>Livongo Opp Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Q Items</relationshipLabel>
        <relationshipName>Q_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parser_Name__c</fullName>
        <label>Parser Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parser_Version__c</fullName>
        <label>Parser Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed with error</fullName>
                </value>
                <value>
                    <fullName>Processed without error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teladoc_Account_Id__c</fullName>
        <label>Teladoc Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teladoc_Opp_Id__c</fullName>
        <label>Teladoc Opp Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outgoing</fullName>
                </value>
                <value>
                    <fullName>Incoming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>src__c</fullName>
        <label>Source</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Q Item</label>
    <nameField>
        <label>Q Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q Items</pluralLabel>
    <recordTypes>
        <fullName>LV_Island</fullName>
        <active>true</active>
        <description>LV custom object creation record type</description>
        <label>LV Island</label>
    </recordTypes>
    <recordTypes>
        <fullName>LV_Org</fullName>
        <active>true</active>
        <label>LV Org</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>